<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormularioEquipoActivity">

    <TextView
            android:text="@string/txtNombreEqueip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="88dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.131"/>
    <TextView
            android:text="@string/txtNombreLiga"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="152dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.116"/>
    <TextView
            android:text="@string/txtNombreFechaCreacio"
            android:layout_width="103dp"
            android:layout_height="26dp"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="216dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.133"/>
    <TextView
            android:text="@string/txtNumeroCopas"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="280dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.129"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_equipo_nombre"
            android:layout_marginTop="68dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.83"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_equipo_liga"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.83"
            android:layout_marginTop="132dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_equipo_fec" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.97"
            android:layout_marginTop="196dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_equipo_copas" android:layout_marginTop="264dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.83" app:layout_constraintTop_toTopOf="parent"/>
    <CheckBox
            android:text="@string/chkCampeonActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chk_equipo_camp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.751" android:layout_marginTop="340dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/btnCancelar"
            android:layout_width="96dp"
            android:layout_height="42dp"
            android:id="@+id/btn_equipo_canc"
            app:layout_constraintTop_toBottomOf="@+id/btn_equipo_guardar"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="@+id/btn_equipo_guardar"
            app:layout_constraintEnd_toEndOf="@+id/btn_equipo_guardar" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/btnAceptar"
            android:layout_width="98dp"
            android:layout_height="51dp"
            android:id="@+id/btn_equipo_guardar" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/chk_equipo_camp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="144dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.596"/>
    <Button
            android:text="@string/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnElim" app:layout_constraintStart_toEndOf="@+id/btn_equipo_guardar"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.304"
            app:layout_constraintTop_toTopOf="@+id/btn_equipo_guardar"/>
</androidx.constraintlayout.widget.ConstraintLayout>