<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormularioJugadorActivity">

    <TextView
            android:text="@string/txtNumeroCamiseta"
            android:layout_width="92dp"
            android:layout_height="20dp"
            android:id="@+id/textView5" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp"
    />
    <TextView
            android:text="Nombre Camis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            tools:text="@string/txtNombreCamiseta"/>
    <TextView
            android:text="@string/txtNombreJugador"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView7" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp"/>
    <TextView
            android:text="@string/txtPoderEspecial"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView8" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"/>
    <TextView
            android:text="@string/txtFenchaIngreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="76dp"
    />
    <TextView
            android:text="@string/txtGoles"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:id="@+id/textView10" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="112dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.031"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_numcam"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="213dp"
            android:layout_height="49dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nomcam" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_numcam" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_poderEsp"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="236dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fech"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_poderEsp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_goles" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_fech" app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_guardarm"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="64dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="556dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:id="@+id/button_cancelar" app:layout_constraintEnd_toStartOf="@+id/button_guardarm"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/button_guardarm"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombCom" android:layout_marginTop="172dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/txtLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.319"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <TextView
            android:text="@string/txtLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="28dp"
            app:layout_constraintHorizontal_bias="0.3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtLat"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/txt_goles"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtLong"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtLat"/>
    <Button
            android:text="@string/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnElim"
            app:layout_constraintTop_toTopOf="@+id/button_cancelar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.045"/>
</androidx.constraintlayout.widget.ConstraintLayout>