<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/button_crear_equi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="244dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btnCrearEquipo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/btnEquipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_listar_equipo"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_crear_equi"
            app:layout_constraintStart_toStartOf="@+id/button_crear_equi"
            app:layout_constraintEnd_toEndOf="@+id/button_crear_equi" app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:text="@string/btnMapa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_listar_equipo"
            app:layout_constraintStart_toStartOf="@+id/button_listar_equipo"
            app:layout_constraintTop_toBottomOf="@+id/button_listar_equipo"
            app:layout_constraintVertical_bias="0.021"/>
</androidx.constraintlayout.widget.ConstraintLayout>